--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">M.V.P Demo</string>
+    <string name="title_activity_add_book">AddBookActivity</string>
 </resources>
